@@ -14,7 +14,7 @@
 #include "logic.h"
 
 #include <qbitarray.h>
-#include <q3ptrvector.h>
+//#include <q3ptrvector.h>  // 2018.10.17
 
 /**
 @author Fredy Yanardi
