@@ -15,7 +15,7 @@
 #include "logic.h"
 
 #include <qbitarray.h>
-#include <q3ptrvector.h>
+//#include <q3ptrvector.h>  // 2018.10.17
 
 /**
 @author David Saxton
