@@ -164,3 +164,9 @@ Changes between Qt3 and Qt4 port (to be completed)
 - Q3PaintDeviceMetrics -> QPrinter->pageRect()
 - canvas.h: split up huge file
 - copy the Q3ScrollView into source tree and use that, as internal source code
+- use Q3PointArray -> QPolygon
+- use Q3ListView -> QTableWidget
+- Q3ScrollView -> use internal copy for now
+- Q3Hbox -> QWidget, QHBoxLayout
+- Q3SimpleRichText -> QTextEdit
+- use Q3PtrVector -> QVector< T * >
